--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,9 +54,9 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#003f88]</td>
-        <td class="secondary">[#f6e851]</td>
-        <td class="accent1">[#7ea3cc]</td>
+        <td class="primary">#003f88</td>
+        <td class="secondary">#f6e851</td>
+        <td class="accent1">#7ea3cc</td>
         <td class="accent2"></td>
       </tr>
     </table>
