add images and content

--- a/heatsolutions/site-plan.html
+++ b/heatsolutions/site-plan.html
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Heat Illnesses <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Prevention  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        This site was created to provide information about the summer heat in the southwest United States region, like Arizona, California, Utah, and others around there. The author is an Arizona native of over 24 years and has many experiences with the heat over 104℉. He works in the heat and is continually trying to learn on how to be safe in the summer heat. You can find information on how to prevent any heat related illnesses, recognize their symptoms, and the things that will make the heat less harmful. Here you can find useful tips and tricks to make sure summer is a breeze and not a heat wave.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/desert.jpg" alt="desert">
+        <img src="images/sunprotection.jpg" alt="protect the skin you're in">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Heat Illnesses</h3>
       <p>
-        [Written copy for the Page 2 here]
+        There are different types of heat illnesses that show similar symptoms to each other. The least-severe illness is heat cramps. Heat cramps are when your muscles in your legs, arms, and core start to stiffen up. This comes from a loss of sodium from the sweat. Something that helps are pickles and pickle juice helps relieve the cramps. Another illness is Heat exhaustion. This is from too much activity in the sun and there is an increase of blood pressure and increase in temperature. This makes you feel weak. If you get dizzy, nauseous, and feeling super sweaty then you are most likely experiencing heat exhaustion. This is the medium-severe one. The most-severe heat related illness is heat stroke. This has very similar symptoms to heat exhaustion, but it can be deadly. If you get a body temperature over 104℉ then you should call 911 and get in the shade and cool off. Heat stroke can cause damage to the body and mind. 
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/headache.jpg" alt="person with headache">
+        <img src="images/sick.jpg" alt="sick person">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Prevention</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The heat is something that can make life miserable if not handled responsibly. There are things that a person can do to prevent the heat even before having to go out into it. One of the most important things that help prevent heat related illnesses is hydration. Water is the most important thing that you can use to stay hydrated. You should be drinking at least 8 cups of water a day, and that could vary depending on your activity level. You can tell if you are hydrated based on your urine color. The darker the urine the more dehydrated you are. Hydration is key because your kidneys and autonomic nervous system help control your sweat and that is what helps keep you cool. Caffeine and sugary beverages also make you more dehydrated so those should be avoided or limited. Sodium is loss in the sweat, so sports beverages and rehydrating packets are important to replace the electrolytes and sodium that was loss in sweat. There are things that we can use to help us to have fun in the heat without having to worry so much about these illnesses. One thing you can do is where a hat. Wide brimmed is usually the best to wear because it will protect your head, eyes, and neck. The brim will help shade the neck and this will help keep the body temperature down. Another thing that helps protect you is sunglasses. Sunglasses help protect the eyes by protecting them from UV rays and not damaging the cornea. Another thing that helps protect from the sun is sunscreen. This protects your skin from the UV rays and helps prevent skin cancer. Loose fitting clothing help you stay cool. Cool rags can help keep you cool while you are in the heat. Tight clothes trap the heat and cause irritation to the skin. As mentioned in the hydration article, water is the most important thing to keep cool and staying hydrated.  
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/water.jpg" alt="water bottle">
+        <img src="images/hat.jpg" alt="hat and clothes">
 
       </ul>
       <hr>
