--- a/heatsolutions/site-plan.html
+++ b/heatsolutions/site-plan.html
@@ -158,21 +158,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        I am going to have the text bend around the images so that they do not look like they were blindly put there.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src= 'images/homewireframe.png' alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Heat Illnesses</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This involves three paragraphs about the three stages of heat related illnesses.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/heatillnesswireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Prevention</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Information on what to use and things that are useful to make the heat more bearable.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/preventionwireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
