--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -26,7 +26,7 @@
         <h3>What age group is appropiate for river rafting?</h3>
         <p>At Dry Oar, we welcome all to come river rafting, however we suggest that children be at least 8 years and older. We do, however, offer fun activities for younger children on the banks to be able to play in the water and allow them to feel more comfortable being near nature and running water.</p>
     </div>
-    <div= class="swim">
+    <div class="swim">
         <h3>Do you have to be able to swim to be able to go river rafting?</h3>
         <p>It is not necessary to have the ability to swim. We give a crash course of what to do in case you fall out of the boat and provide everyone with life jackets certified by the Coast Guard. There are also activities involved on land so that you do not have to even get in the water if you do not want to. Our staff is CPR certified and have had extensive medical training so that in case of any injury, they are trained to handle it in the most professional manner possible.</p>
     </div>
