--- a/heatsolutions/prevention.html
+++ b/heatsolutions/prevention.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
     <main class = 'prevention-grid'>
-        <h1> HEAT ILLNESSES </h1>
+        <h1> Prevention </h1>
         <img src="images/water.jpg" alt="Water Bottle">
         <h2> Hydration </h2>
         <p>
