--- a/heatsolutions/index.html
+++ b/heatsolutions/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +20,10 @@
             </nav>
         </header>
     <main class = 'home-grid'>
-        <h1> HOME </h1>
-        <img src="images/sunprotection.jpg" alt="Protect the skin youre in">
-        <img src = "images/desert.jpg" alt ="Road in the desert">
-        <h2> About the Author and site </h2>
+        <h1 class ="msg"> HOME </h1>
+        <img class = 'sun' src="images/sunprotection.jpg" alt="Protect the skin youre in">
+        <img class = 'desert' src = "images/desert.jpg" alt ="Road in the desert">
+        <h2 class="msg"> About Us</h2>
         <p>
             This site was created to provide information about the summer heat in the southwest United States region, like Arizona, California, Utah, and others around there. The author is an Arizona native of over 24 years and has many experiences with the heat over 104℉. He works in the heat and is continually trying to learn on how to be safe in the summer heat. You can find information on how to prevent any heat related illnesses, recognize their symptoms, and the things that will make the heat less harmful. Here you can find useful tips and tricks to make sure summer is a breeze and not a heat wave.
         </p>
