--- a/heatsolutions/index.html
+++ b/heatsolutions/index.html
@@ -25,7 +25,7 @@
             </nav>
         </header>
     <main class = 'home-grid'>
-        <h1 class ="msg"> HOME </h1>
+        <h1> HOME </h1>
         <img class = 'sun' src="images/sunprotection.jpg" alt="Protect the skin youre in">
         <img class = 'desert' src = "images/desert.jpg" alt ="Road in the desert">
         <p>
