--- a/heatsolutions/prevention.html
+++ b/heatsolutions/prevention.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,23 +14,32 @@
                 <img class="logo" src="images/heatsolutions.png" alt="Heat Solutions logo">
             </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="heatillnesses.html">Heat Illnesses</a>
-                <a href="prevention.html">Prevention</a>
+                <div class="dropdown">
+                    <button class="dropbtn">MENU</button>
+                    <div class="dropdown-content">
+                      <a href="index.html">Home</a>
+                      <a href="heatillnesses.html">Heat Illnesses</a>
+                      <a href="prevention.html">Prevention</a>
+                    </div>
+                  </div>
             </nav>
         </header>
     <main class = 'prevention-grid'>
         <h1> Prevention </h1>
-        <img src="images/water.jpg" alt="Water Bottle">
-        <h2> Hydration </h2>
-        <p>
-            The heat is something that can make life miserable if not handled responsibly. There are things that a person can do to prevent the heat even before having to go out into it. One of the most important things that help prevent heat related illnesses is hydration. Water is the most important thing that you can use to stay hydrated. You should be drinking at least 8 cups of water a day, and that could vary depending on your activity level. You can tell if you are hydrated based on your urine color. The darker the urine the more dehydrated you are. Hydration is key because your kidneys and autonomic nervous system help control your sweat and that is what helps keep you cool. Caffeine and sugary beverages also make you more dehydrated so those should be avoided or limited. Sodium is loss in the sweat, so sports beverages and rehydrating packets are important to replace the electrolytes and sodium that was loss in sweat
-        </p>
-        <img src = "images/hat.jpg" alt ="Sun Hat">
-        <h2> Helpful Items </h2>
-        <p>
-            There are things that we can use to help us to have fun in the heat without having to worry so much about these illnesses. One thing you can do is where a hat. Wide brimmed is usually the best to wear because it will protect your head, eyes, and neck. The brim will help shade the neck and this will help keep the body temperature down. Another thing that helps protect you is sunglasses. Sunglasses help protect the eyes by protecting them from UV rays and not damaging the cornea. Another thing that helps protect from the sun is sunscreen. This protects your skin from the UV rays and helps prevent skin cancer. Loose fitting clothing help you stay cool. Cool rags can help keep you cool while you are in the heat. Tight clothes trap the heat and cause irritation to the skin. As mentioned in the hydration article, water is the most important thing to keep cool and staying hydrated.
-        </p>
+        <img class="water" src="images/water.jpg" alt="Water Bottle">
+        <div class="hydration">
+            <h2> Hydration </h2>
+            <p>
+                The heat is something that can make life miserable if not handled responsibly. There are things that a person can do to prevent the heat even before having to go out into it. One of the most important things that help prevent heat related illnesses is hydration. Water is the most important thing that you can use to stay hydrated. You should be drinking at least 8 cups of water a day, and that could vary depending on your activity level. You can tell if you are hydrated based on your urine color. The darker the urine the more dehydrated you are. Hydration is key because your kidneys and autonomic nervous system help control your sweat and that is what helps keep you cool. Caffeine and sugary beverages also make you more dehydrated so those should be avoided or limited. Sodium is loss in the sweat, so sports beverages and rehydrating packets are important to replace the electrolytes and sodium that was loss in sweat
+            </p>
+        </div>
+        <img class = 'hat' src = "images/hat.jpg" alt ="Sun Hat">
+        <div class="helpful">
+            <h2> Helpful Items </h2>
+            <p>
+                There are things that we can use to help us to have fun in the heat without having to worry so much about these illnesses. One thing you can do is where a hat. Wide brimmed is usually the best to wear because it will protect your head, eyes, and neck. The brim will help shade the neck and this will help keep the body temperature down. Another thing that helps protect you is sunglasses. Sunglasses help protect the eyes by protecting them from UV rays and not damaging the cornea. Another thing that helps protect from the sun is sunscreen. This protects your skin from the UV rays and helps prevent skin cancer. Loose fitting clothing help you stay cool. Cool rags can help keep you cool while you are in the heat. Tight clothes trap the heat and cause irritation to the skin. As mentioned in the hydration article, water is the most important thing to keep cool and staying hydrated.
+            </p>
+        </div>
      </main>
      <footer>
         <h3> heatsolutions &copy; 2022 - Hunter Denham </h3>
