--- a/heatsolutions/index.html
+++ b/heatsolutions/index.html
@@ -25,12 +25,14 @@
             </nav>
         </header>
     <main class = 'home-grid'>
-        <h1> HOME </h1>
+        <div class = 'home'>
+            <h1> HOME </h1>
+            <p>
+                This site was created to provide information about the summer heat in the southwest United States region, like Arizona, California, Utah, and others around there. The author is an Arizona native of over 24 years and has many experiences with the heat over 104℉. He works in the heat and is continually trying to learn on how to be safe in the summer heat. You can find information on how to prevent any heat related illnesses, recognize their symptoms, and the things that will make the heat less harmful. Here you can find useful tips and tricks to make sure summer is a breeze and not a heat wave.
+            </p>
+        </div>
         <img class = 'sun' src="images/sunprotection.jpg" alt="Protect the skin youre in">
         <img class = 'desert' src = "images/desert.jpg" alt ="Road in the desert">
-        <p>
-            This site was created to provide information about the summer heat in the southwest United States region, like Arizona, California, Utah, and others around there. The author is an Arizona native of over 24 years and has many experiences with the heat over 104℉. He works in the heat and is continually trying to learn on how to be safe in the summer heat. You can find information on how to prevent any heat related illnesses, recognize their symptoms, and the things that will make the heat less harmful. Here you can find useful tips and tricks to make sure summer is a breeze and not a heat wave.
-        </p>
      </main>
      <footer>
         <h3> heatsolutions &copy; 2022 - Hunter Denham </h3>
